--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     <script>
         const swiper = new Swiper('.swiper', {
             direction: 'horizontal',
-            loop: true,
+            loop: false,
+            autoplay: true,
             effect: "cards",
 
             pagination: {
